--- a/app/src/main/res/layout/parash.xml
+++ b/app/src/main/res/layout/parash.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     android:weightSum="1">
 
+    <Button
+        android:text="Button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/button" />
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="96dp"
@@ -35,5 +41,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/btn_aboutparash"
         android:layout_below="@+id/btn_album" />
+
+    <Button
+        android:text="Button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/button2" />
 
 </LinearLayout>
