--- a/app/src/main/res/layout/parash.xml
+++ b/app/src/main/res/layout/parash.xml
@@ -42,4 +42,10 @@
         android:id="@+id/btn_aboutparash"
         android:layout_below="@+id/btn_album" />
 
+    <Button
+        android:text="Button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/button4" />
+
 </LinearLayout>
