--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/titanbtn"
-        android:id="@+id/imageButton2"
+        android:id="@+id/imgbtn_titan"
         android:scaleType="fitXY"
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true" />
@@ -38,23 +38,23 @@
         android:scaleType="fitXY"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/imageView"
-        android:layout_above="@+id/imageButton2" />
+        android:layout_above="@+id/imgbtn_titan" />
 
     <ImageButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/rayanbtn"
-        android:id="@+id/imageButton4"
+        android:id="@+id/imgbtn_rayan"
         android:scaleType="fitXY"
-        android:layout_below="@+id/imageButton2"
+        android:layout_below="@+id/imgbtn_titan"
         android:layout_alignParentStart="true"
-        android:layout_above="@+id/imageButton3" />
+        android:layout_above="@+id/imgbtn_peyk" />
 
     <ImageButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/peykbtn"
-        android:id="@+id/imageButton3"
+        android:id="@+id/imgbtn_peyk"
         android:elevation="0dp"
         android:scaleType="fitXY"
         android:layout_alignParentBottom="true"
