--- a/app/src/main/res/layout/cell_layout.xml
+++ b/app/src/main/res/layout/cell_layout.xml
@@ -6,7 +6,8 @@
     <ImageView
         android:id="@+id/img"
         android:adjustViewBounds="true"
-        android:layout_width="match_parent" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/title"
         android:layout_gravity="center"
