--- a/app/src/main/res/layout/gallery.xml
+++ b/app/src/main/res/layout/gallery.xml
@@ -8,5 +8,7 @@
 
         android:id="@+id/imagegallery"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="visible" />
 </LinearLayout>
+
