--- a/app/src/main/res/layout/video.xml
+++ b/app/src/main/res/layout/video.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <Button
-        android:text="Repeate"
+        android:text="repeate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/button" />
